<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gif Example App</string>
    <string name="menu_search">Search</string>
    <string name="search_gifs">Search Gifs</string>
    <string name="main_screen_title">Top Trending Gifs</string>
    <string name="gif_image">Gif image</string>
</resources>
